--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.11",
     "dotenv": "^16.4.7",
+    "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
