--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
