--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@niledatabase/nile-mcp-server",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.1",
   "description": "Nile MCP Server Implementation",
   "main": "dist/index.js",
   "type": "module",
@@ -61,5 +61,6 @@
       ],
       "@semantic-release/github"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
