--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "semantic-release": "^24.0.0",
     "ts-jest": "^29.1.2"
   },
   "publishConfig": {
